project: Remove project type target parsers from this project
I'm currently working on a new project management library (projector)
and intend to move these definitions into a compatibility layer their
instead of maintaining them here. This will make it easier to use newer
build frameworks with project definitions AND make this package function
more as a utility then as a feature provider for the myriad of available
build frameworks.

--- a/README.org
+++ b/README.org
@@ -99,9 +99,13 @@ for example to list all of the makefile targets of a project and then execute on
    #+begin_src emacs-lisp
      (require 'compile-multi-make)
 
+     (defun compile-multi-make-targets+ ()
+       ;; Read targets from Makefile.
+       '(("make:foo" . "foo")))
+
      (push `((file-exists-p "Makefile")
              ("action-1" . command-1)
-             ,#'compile-multi-make-targets
+             ,#'compile-multi-make-targets+
              ("action-2" . command-2))
            compile-multi-config)
    #+end_src
