--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 
 #+html: <p align="right">
 #+html: <a href="https://github.com/mohkale/compile-multi" alt="lint" style="margin-right: 4px;"><img src="https://github.com/mohkale/compile-multi/actions/workflows/lint.yml/badge.svg" /></a>
-#+html: <a href="https://melpa.org/#/compile-multi"><img align="center" alt="MELPA" src="https://melpa.org/packages/compile-multi.svg"/></a>
+#+html: <a href="https://melpa.org/#/compile-multi"><img alt="MELPA" src="https://melpa.org/packages/compile-multi-badge.svg"/></a>
 #+html: </p>
 
 
